--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,6 +30,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install --upgrade build wheel
+          python -m pip install -r requirements.txt
       - name: Build package
         run:  python -m build --no-isolation
       - name: Publish package
