--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "flexible_dict"
 dynamic = ["version"]
 description = "A flexible way to access dict data instead of built-in dict."
-readme = "RAEDME.md"
+readme = "README.md"
 authors = [
     {name = "darkpeath", email = "darkpeath@gmail.com"}
 ]
