--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,9 +29,9 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install -r requirements.txt
+          python -m pip install --upgrade build wheel
       - name: Build package
-        run:  python -m build --no-isolation
+        run:  python -m build
       - name: Publish package
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
